--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
             steps {
             echo 'Deploying....' 
             sshagent(['Deploy_user']) { 
-                sh "scp -o StrictHostKeyChecking=no /var/lib/jenkins/workspace/jenkins-pipeline/target/webapp-0.2.war centos@174.129.191.136:/home/centos/apache-tomcat-10.0.27/webapps"
+                sh "scp /var/lib/jenkins/workspace/jenkins-pipeline/target/webapp-0.2.war centos@174.129.191.136:/home/centos/apache-tomcat-10.0.27/webapps"
                  }
             }
         }
