--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('deploy') {
             steps {
             echo 'Deploying....' 
-            sshagent(['Deploy_user']) { 
+            sshagent(['deploy']) { 
                 sh "scp -o StrictHostKeyChecking=no /var/lib/jenkins/workspace/Jenkins-CI-CD-Project/target/webapp-0.2.war centos@174.129.191.136:/home/centos/apache-tomcat-10.0.27/webapps"
                  }
             }
